--- a/dev/mini/env.example
+++ b/dev/mini/env.example
@@ -1,20 +1,17 @@
 ## rename this file to .env to be picked up by docker-compose
 ## docker-compose must be run in the same directory as .env
 
-## note, docker-compose requires that all values be defined
-## the default no-op values are filled in below.
-
-
 ## GLOBAL VALUES ##
 
-# the full URL of the application. i.e. http://localhost:3080 , or http://1.1.1.1:80
-APP_URL=http://localhost:3080
-
+# publicly accessible URL to web app (e.g., what you type into your browser)
+# SRC_APP_URL=http://localhost:3080
+# The port on SRC_APP_URL. Duplicative, but no processing ability in docker files, so restate here.
+# SRC_APP_PORT=3080
 
 ## LOCAL GIT REPOSITORY SETUP ##
 ## TODO NOT WORKING YET ##
 # if you would like to run Sourcegraph on git repositories on your local filesystem, specify an absolute path to your local git repositories
-GIT_DIRECTORY=.empty
+# GIT_DIRECTORY=
 
 
 ## REMOTE GIT HOST SETUP ##
@@ -25,9 +22,8 @@ GIT_DIRECTORY=.empty
 #
 # i.e. companydomain.com/!git@companydomain.com:% is the mapping for GitHub Enterprise
 # i.e. gitolite.internal.domain/!git@gitolite.internal.domain:% is the mapping for a self-hosted gitolite option
-ORIGIN_MAP=""
+# ORIGIN_MAP=""
 
 # specify a folder with the approrpriate SSH keypair to clone from the remote host
 # don't forget to include a known_hosts file, which can be generated like: ssh-keyscan github.com >> known_hosts
-# to set it up with your personal ssh keys, "SSH_KEYPAIR_FOLDER=~/.ssh" is what you want.
-SSH_KEYPAIR_FOLDER=.empty
+# SSH_KEYPAIR_FOLDER=~/.ssh
