zap new spec refactor (#5132)

--- a/ui/package.json
+++ b/ui/package.json
@@ -70,7 +70,7 @@
         "glamor": "2.20.8",
         "graphql-tag": "^1.3.2",
         "isomorphic-fetch": "2.2.1",
-        "libzap": "^0.0.100",
+        "libzap": "new-spec",
         "lodash": "4.17.2",
         "object-hash": "^1.1.5",
         "raven-js": "3.8.1",
@@ -84,7 +84,7 @@
         "string_score": "0.1.22",
         "url": "0.11.0",
         "uuid": "^3.0.1",
-        "vscode-zap": "^0.0.100"
+        "vscode-zap": "new-spec"
     },
     "scripts": {
         "postinstall": "(cd scripts/tsmapimports/ && yarn install)",
