Add Tracing to xlang-typescript (#5213)

--- a/xlang/javascript-typescript/buildserver/package.json
+++ b/xlang/javascript-typescript/buildserver/package.json
@@ -12,10 +12,12 @@
     "chai": "^3.4.34",
     "commander": "^2.9.0",
     "iterare": "^0.0.7",
-    "javascript-typescript-langserver": "^2.0.0-pre.8",
+    "javascript-typescript-langserver": "^2.0.0-pre.10",
+    "lightstep-tracer": "^0.20.2",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "mz": "^2.6.0",
+    "opentracing": "felixfbecker/opentracing-javascript#d42e8ac50e3555ca1a9a006bee0fd5856a838a47",
     "rimraf": "^2.5.4",
     "semver": "^5.3.0",
     "typescript": "2.2.1",
