--- a/dev/mini/env.example
+++ b/dev/mini/env.example
@@ -8,10 +8,13 @@
 # The port on SRC_APP_URL. Duplicative, but no processing ability in docker files, so restate here.
 # SRC_APP_PORT=3080
 
-## LOCAL GIT REPOSITORY SETUP ##
-## TODO NOT WORKING YET ##
+
+
+## LOCAL FILESYSTEM SETUP ##
 # if you would like to run Sourcegraph on git repositories on your local filesystem, specify an absolute path to your local git repositories
-# GIT_DIRECTORY=
+# GIT_DIRECTORY=/Users/user/path/to/folder
+# boilerplate, just uncomment out below, means your repositories will be accessible at ${SRC_APP_URL}/local/repo_name
+# ORIGIN_MAP=local/!local/%
 
 
 ## REMOTE GIT HOST SETUP ##
@@ -22,7 +25,7 @@
 #
 # i.e. companydomain.com/!git@companydomain.com:% is the mapping for GitHub Enterprise
 # i.e. gitolite.internal.domain/!git@gitolite.internal.domain:% is the mapping for a self-hosted gitolite option
-# ORIGIN_MAP=""
+# ORIGIN_MAP=
 
 # specify a folder with the approrpriate SSH keypair to clone from the remote host
 # don't forget to include a known_hosts file, which can be generated like: ssh-keyscan github.com >> known_hosts
