--- a/xlang/javascript-typescript/buildserver/tsconfig.json
+++ b/xlang/javascript-typescript/buildserver/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es2016",
+    "target": "es2017",
     "lib": [
-      "es2016"
+      "es2017",
+      "dom"
     ],
     "module": "commonjs",
     "moduleResolution": "node",
