--- a/dev/mini/env.example
+++ b/dev/mini/env.example
@@ -1,5 +1,6 @@
 ## rename this file to .env to be picked up by docker-compose
 ## docker-compose must be run in the same directory as .env
+## not needed to run on default configuration (which allows access to GitHub.com public repositories)
 
 ## GLOBAL VALUES ##
 
@@ -11,13 +12,14 @@
 
 
 ## LOCAL FILESYSTEM SETUP ##
-# if you would like to run Sourcegraph on git repositories on your local filesystem, specify an absolute path to your local git repositories
-# GIT_DIRECTORY=/Users/user/path/to/folder
-# boilerplate, just uncomment out below, means your repositories will be accessible at ${SRC_APP_URL}/local/repo_name
+# if you would like to run Sourcegraph on git repositories on your local filesystem, specify an absolute path to your local git repositories (this is the directory that contains all other git directories in your system, i.e. $GOPATH/src/github.com)
+# GIT_PARENT_DIRECTORY=/Users/user/path/to/folder
+# boilerplate, just uncomment out below, means your repositories will be accessible at ${SRC_APP_URL}/local/any_dirs/repo_folder
 # ORIGIN_MAP=local/!local/%
 
 
 ## REMOTE GIT HOST SETUP ##
+## HARDER TO SET UP THAN LOCAL FILESYSTEM, SO RECOMMENDED TO START WITH LOCAL FILESYSTEM ##
 
 # specify how to map from a sourcegraph url to a remote repo url
 # should take the form of <sourecgraph_repo_url_prefix>!<git_clone_address>%
