--- a/xlang/javascript-typescript/buildserver/package.json
+++ b/xlang/javascript-typescript/buildserver/package.json
@@ -12,12 +12,13 @@
     "chai": "^3.4.34",
     "commander": "^2.9.0",
     "iterare": "^0.0.7",
-    "javascript-typescript-langserver": "^2.0.0-pre.20",
+    "javascript-typescript-langserver": "^2.0.0-pre.21",
     "lightstep-tracer": "^0.20.2",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "mz": "^2.6.0",
     "opentracing": "felixfbecker/opentracing-javascript#d42e8ac50e3555ca1a9a006bee0fd5856a838a47",
+    "package-json": "^4.0.0",
     "rimraf": "^2.5.4",
     "semver": "^5.3.0",
     "typescript": "2.2.1",
@@ -33,6 +34,7 @@
     "@types/mocha": "2.2.33",
     "@types/mz": "0.0.30",
     "@types/rimraf": "0.0.28",
+    "@types/semver": "5.3.31",
     "@types/sinon": "2.1.2",
     "@types/temp": "0.8.29",
     "@types/uuid": "2.0.29",
