--- a/xlang/javascript-typescript/buildserver/package.json
+++ b/xlang/javascript-typescript/buildserver/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "mz": "^2.6.0",
+    "object-hash": "^1.1.8",
     "opentracing": "felixfbecker/opentracing-javascript#d42e8ac50e3555ca1a9a006bee0fd5856a838a47",
     "package-json": "^4.0.0",
     "rimraf": "^2.5.4",
@@ -33,6 +34,7 @@
     "@types/mkdirp": "0.3.29",
     "@types/mocha": "2.2.33",
     "@types/mz": "0.0.30",
+    "@types/object-hash": "0.5.28",
     "@types/rimraf": "0.0.28",
     "@types/semver": "5.3.31",
     "@types/sinon": "2.1.2",
