sg-mini: remote repos instructions - make script more compatible - make initializer wait on postgres - update README

--- a/dev/mini/init/Dockerfile
+++ b/dev/mini/init/Dockerfile
@@ -3,6 +3,7 @@
 # Environment expectations:
 # - expects local repositories to be mounted at $GIT_PARENT_DIRECTORY
 # - expects PostgreSQL environment variables to be set and the appropriate Postgres server instance to be available at the specified coordinates
+# - $ENSURE_REPOS_REMOTE specifies remote repositories that should be cloned on startup
 
 FROM alpine:3.5
 RUN apk update
@@ -12,4 +13,4 @@ ADD *.sh /scripts/
 WORKDIR /scripts
 
 # Run the init script and then stick around in case we want to run additional scripts.
-CMD "/bin/bash" "-c" "./init.sh; while true; do sleep 86400; done;"
+CMD "./init.sh"
