--- a/dev/mini/sourcegraph/env.example
+++ b/dev/mini/sourcegraph/env.example
@@ -12,8 +12,52 @@
 # LOCAL FILESYSTEM SETUP
 ############################
 
-# the mapping from URL path to directory path in gitserver
+# 1. Specify the mapping from URL path to directory path in gitserver
 ORIGIN_MAP=local/!local/%
 
-# the directory on the host machine that contains local git repositories
+# 2. Specify the directory on the host machine that contains local git repositories
 # GIT_PARENT_DIRECTORY=/Users/user/path/to/folder
+
+#########################################################
+# REMOTE GIT HOST SETUP
+# !!! WARNING: RUN THROUGH LOCAL FILESYSTEM SETUP FIRST
+#########################################################
+
+# 1. Specify a folder containing a SSH key that enables you to `git
+# clone` from your remote repository host. The folder should also
+# contain a known_hosts file. If running on a development machine, the
+# default value of "~/.ssh" typically works.
+# Debugging tips: If your SSH folder does not contain a known_hosts
+# file, generate one with:
+# ssh-keyscan github.com >> known_hosts SSH_KEYPAIR_FOLDER=~/.ssh
+#
+# SSH_KEYPAIR_FOLDER=~/.ssh
+
+
+# 2. Specify how to map from a Sourcegraph URL to a remote repository
+# URL.  The value should be of the form:
+#
+#         <sourecgraph_repo_url_prefix>!<git_clone_address>%
+#
+# where '!' separates the "to" from the "from" part of the mapping,
+# and '%' matches everything after the prefix. Note that this will
+# overwrite any previous value for ORIGIN_MAP in this file.
+#
+# For GitHub Enterprise, uncomment the following line and change the domain to match your GitHub Enterprise URL:
+# ORIGIN_MAP=companydomain.com/!git@companydomain.com:%
+#
+# For Gitolite, uncomment the following line and change the domain to match your Gitolite URL:
+# ORIGIN_MAP=gitolite.internal.domain/!git@gitolite.internal.domain:%
+#
+# Here's example with 2 mappings, one local, one remote
+# ORIGIN_MAP=local/!local/% gitolite.internal.domain/!git@gitolite.internal.domain:%
+#
+# Otherwise, set ORIGIN_MAP to the appropriate value:
+# ORIGIN_MAP=
+
+# 3. Specify which remote repositories you want Sourcegraph to index
+# by path name (each path name should start with the left-hand-side of
+# a ORIGIN_MAP value).
+#
+# If you used the GitHub Enterprise ORIGIN_MAP value from above, you can uncomment the following line and replace with your specific repositories:
+# ENSURE_REPOS_REMOTE=companydomain.com/foorepo companydomain.com/barrepo
