--- a/xlang/python/Dockerfile
+++ b/xlang/python/Dockerfile
@@ -1,12 +1,11 @@
-# Docker image for JavaScript/TypeScript lang/build server
+FROM python:3.6-alpine
+RUN apk update && apk upgrade && apk add git && pip install --upgrade pip
 
-FROM python:3.5-alpine
-RUN apk update && apk upgrade && apk add git
+ADD python-langserver/requirements.txt /tmp/requirements.txt
+RUN pip install -r /tmp/requirements.txt && rm /tmp/requirements.txt
 
 ADD python-langserver /src
 WORKDIR /src
 
-RUN pip install --upgrade pip && pip install -r requirements.txt
-
 EXPOSE 2087
-CMD ["python3", "python-langserver.py", "--mode", "tcp", "--addr", "2087", "--remote", "1"]
+CMD ["python3", "python-langserver.py", "--mode", "tcp", "--addr", "2087"]
