--- a/client/browser-ext/package.json
+++ b/client/browser-ext/package.json
@@ -41,6 +41,7 @@
 		"webpack-dev-server": "^1.10.1"
 	},
 	"dependencies": {
+		"@types/jsdom": "^2.0.30",
 		"autobind-decorator": "^1.3.4",
 		"bluebird": "^3.3.4",
 		"html-truncate": "1.2.2",
