chrome-ext: properly hit bitbucket server instance

--- a/dev/local-installer/sourcegraph/env.example
+++ b/dev/local-installer/sourcegraph/env.example
@@ -46,6 +46,11 @@ ORIGIN_MAP=local/!local/%
 # For GitHub Enterprise, uncomment the following line and change the domain to match your GitHub Enterprise URL:
 # ORIGIN_MAP=companydomain.com/!git@companydomain.com:%
 #
+# For Bitbucket Server, uncomment the following line. Note: in order for the Sourcegraph Chrome extension /
+# Bitbucket Server integration to work, the format of the line must conform to the `bitbucketserver/${project}/${repo}`
+# format. You may have to change the "http" to "https" if your Bitbucket Server instance is behind SSL/TLS.
+# ORIGIN_MAP=bitbucket/!http://your.bitbucket.instance.hostname/scm/%.git
+#
 # For Gitolite, uncomment the following line and change the domain to match your Gitolite URL:
 # ORIGIN_MAP=gitolite.internal.domain/!git@gitolite.internal.domain:%
 #
