local-installer: env.example: github.com example

--- a/dev/local-installer/sourcegraph/env.example
+++ b/dev/local-installer/sourcegraph/env.example
@@ -46,6 +46,9 @@ ORIGIN_MAP=local/!local/%
 # For GitHub Enterprise, uncomment the following line and change the domain to match your GitHub Enterprise URL:
 # ORIGIN_MAP=companydomain.com/!git@companydomain.com:%
 #
+# For GitHub.com, uncomment the following line.
+# ORIGIN_MAP=github.com/!git@github.com:%.git
+#
 # For Bitbucket Server, uncomment the following line. Note: in order for the Sourcegraph Chrome extension /
 # Bitbucket Server integration to work, the format of the line must conform to the `bitbucketserver/${project}/${repo}`
 # format. You may have to change the "http" to "https" if your Bitbucket Server instance is behind SSL/TLS.
