Update TS LS (#5525)
* Add rootUri param to tests

* Update opentracing

* Adapt changes to Observables

* Convert Observables in tests

* Use finally() instead of do()

do() complete is sometimes not called

* Use normalizeUri

* Reintroduce tracing for ensuring dependencies

* Bump version

--- a/xlang/javascript-typescript/buildserver/package.json
+++ b/xlang/javascript-typescript/buildserver/package.json
@@ -13,13 +13,13 @@
     "chai": "^3.4.34",
     "commander": "^2.9.0",
     "iterare": "^0.0.7",
-    "javascript-typescript-langserver": "^2.0.0-pre.26",
+    "javascript-typescript-langserver": "^2.0.0-pre.27",
     "lightstep-tracer": "^0.20.2",
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "mz": "^2.6.0",
     "object-hash": "^1.1.8",
-    "opentracing": "felixfbecker/opentracing-javascript#d42e8ac50e3555ca1a9a006bee0fd5856a838a47",
+    "opentracing": "^0.14.0",
     "package-json": "^4.0.0",
     "rimraf": "^2.5.4",
     "semver": "^5.3.0",
