local-installer: add std libs by default

--- a/dev/local-installer/sourcegraph/env.example
+++ b/dev/local-installer/sourcegraph/env.example
@@ -31,7 +31,7 @@ ORIGIN_MAP=local/!local/%
 # file, generate one with:
 # ssh-keyscan github.com >> known_hosts SSH_KEYPAIR_FOLDER=~/.ssh
 #
-# SSH_KEYPAIR_FOLDER=~/.ssh
+SSH_KEYPAIR_FOLDER=~/.ssh
 
 
 # 2. Specify how to map from a Sourcegraph URL to a remote repository
@@ -63,9 +63,14 @@ ORIGIN_MAP=local/!local/%
 # Otherwise, set ORIGIN_MAP to the appropriate value:
 # ORIGIN_MAP=
 
-# 3. Specify which remote repositories you want Sourcegraph to index
-# by path name (each path name should start with the left-hand-side of
-# a ORIGIN_MAP value).
+# 3. Specify which remote repositories you want Sourcegraph to index on startup
+# by their repository URI. If you specified a mapping for your private repositories using ORIGIN_MAP
+# you can specify those repositories in ENSURE_REPOS_REMOTE. For instance, if ORIGIN_MAP=mycompany.com/!mycompany/%.git,
+# then you can set:
 #
-# If you used the GitHub Enterprise ORIGIN_MAP value from above, you can uncomment the following line and replace with your specific repositories:
-# ENSURE_REPOS_REMOTE=companydomain.com/foorepo companydomain.com/barrepo
+# ENSURE_REPOS_REMOTE=mycompany.com/path/to/repo github.com/golang/go github.com/jdkmirrors/openjdk8 github.com/androidmirrors/android-sdk
+#
+# The default value of ENSURE_REPOS_REMOTE includes standard libraries in each language. Unless your needs are very
+# special, you should keep these URIs if you specify your own value.
+#
+ENSURE_REPOS_REMOTE=github.com/golang/go github.com/jdkmirrors/openjdk8 github.com/androidmirrors/android-sdk
