local-installer: update docker-compose.yml

--- a/dev/local-installer/sourcegraph/docker-compose.yml
+++ b/dev/local-installer/sourcegraph/docker-compose.yml
@@ -106,7 +106,7 @@ services:
       - "postgres"
       - "redis"
   initializer:
-    image: "docker.sourcegraph.com/initializer:local"
+    image: "docker.sourcegraph.com/initializer:latest"
     volumes:
       - ${GIT_PARENT_DIRECTORY:-.}:/local
     environment:
