chrome-ext: options page in prod

--- a/client/browser-ext/chrome/manifest.prod.json
+++ b/client/browser-ext/chrome/manifest.prod.json
@@ -33,6 +33,10 @@
       "js/background.bundle.js"
     ]
   },
+  "options_ui": {
+    "page": "options.html",
+    "chrome_style": true
+  },
   "permissions": [
     "cookies",
     "storage",
