--- a/dev/local-installer/sourcegraph/env.example
+++ b/dev/local-installer/sourcegraph/env.example
@@ -2,11 +2,15 @@
 # GLOBAL VALUES
 ########################
 
+CONFIG_DIR=./config
+
 # public hostname for your Sourcegraph instance (e.g., the hostname of the URL you type into your browser)
-# SRC_APP_HOST=http://localhost
+# Uncomment this if you want to change the hostname or protocol (i.e., use https).
+# SRC_APP_HOST=https://localhost
 
 # public port for your Sourcegraph instance (e.g., the port of the URL you type into your web browser)
 # SRC_APP_PORT=3080
+# SRC_APP_PORT=3443
 
 ############################
 # LOCAL FILESYSTEM SETUP
@@ -74,3 +78,11 @@ SSH_KEYPAIR_FOLDER=~/.ssh
 # special, you should keep these URIs if you specify your own value.
 #
 ENSURE_REPOS_REMOTE=github.com/golang/go github.com/jdkmirrors/openjdk8 github.com/androidmirrors/android-sdk
+
+
+#########################################################
+# SPECIAL OPTIONS
+#########################################################
+# SRC_TLS_CERT=/config/sg.cer
+# SRC_TLS_KEY=/config/sg.key
+# CORS_ORIGIN='*'
