--- a/client/browser-ext/chrome/manifest.prod.json
+++ b/client/browser-ext/chrome/manifest.prod.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.1.97",
+  "version": "1.1.98",
   "name": "Sourcegraph for GitHub",
   "manifest_version": 2,
   "description": "Gives GitHub IDE powers: jump to definition and hover tooltips in code, PRs, and diffs",
@@ -43,6 +43,9 @@
     "https://github.com/*",
     "https://sourcegraph.com/*"
   ],
-  "optional_permissions": ["http://*/", "https://*/"],
+  "optional_permissions": [
+    "http://*/",
+    "https://*/"
+  ],
   "content_security_policy": "default-src 'self'; script-src 'self'; connect-src 'self' https://sourcegraph-logging.telligentdata.com;"
 }
