local-installer: hide some warnings

--- a/dev/local-installer/sourcegraph/env.example
+++ b/dev/local-installer/sourcegraph/env.example
@@ -83,6 +83,15 @@ ENSURE_REPOS_REMOTE=github.com/golang/go github.com/jdkmirrors/openjdk8 github.c
 #########################################################
 # SPECIAL OPTIONS
 #########################################################
+
+SRC_HTTP_ADDR=
+SRC_HTTPS_ADDR=
+
+SRC_TLS_CERT=
 # SRC_TLS_CERT=/config/sg.cer
+
+SRC_TLS_KEY=
 # SRC_TLS_KEY=/config/sg.key
+
+CORS_ORIGIN=
 # CORS_ORIGIN='*'
