allow TLS config to be spefified directly via env vars

--- a/dev/local-installer/sourcegraph/docker-compose.yml
+++ b/dev/local-installer/sourcegraph/docker-compose.yml
@@ -16,8 +16,8 @@ services:
       SRC_GIT_SERVERS: gitserver-1:3178
       SRC_INDEXER: indexer:3179
       SRC_SESSION_STORE_REDIS: redis:6379
-      SRC_TLS_CERT: ${SRC_TLS_CERT}
-      SRC_TLS_KEY: ${SRC_TLS_KEY}
+      TLS_CERT_FILE: ${TLS_CERT_FILE}
+      TLS_KEY_FILE: ${TLS_KEY_FILE}
       SRC_HTTP_ADDR: ${SRC_HTTP_ADDR}
       SRC_HTTPS_ADDR: ${SRC_HTTPS_ADDR}
       TRACKING_APP_ID:
