--- a/dev/local-installer/sourcegraph/env.example
+++ b/dev/local-installer/sourcegraph/env.example
@@ -87,11 +87,11 @@ ENSURE_REPOS_REMOTE=github.com/golang/go github.com/jdkmirrors/openjdk8 github.c
 SRC_HTTP_ADDR=
 SRC_HTTPS_ADDR=
 
-SRC_TLS_CERT=
-# SRC_TLS_CERT=/config/sg.cer
+TLS_CERT_FILE=
+# TLS_CERT_FILE=/config/sg.cer
 
-SRC_TLS_KEY=
-# SRC_TLS_KEY=/config/sg.key
+TLS_KEY_FILE=
+# TLS_KEY_FILE=/config/sg.key
 
 CORS_ORIGIN=
 # CORS_ORIGIN='*'
