local-installer: update dev run script

--- a/dev/up/.env
+++ b/dev/up/.env
@@ -12,3 +12,5 @@ WEBPACK_DEV_SERVER_ADDR=${WEBPACK_DEV_SERVER_ADDR:-127.0.0.1:8080}
 SRC_APP_DISABLE_SUPPORT_SERVICES=true
 DEBUG=true
 AUTH_ENABLED=true
+PGUSER=sg
+PGDATABASE=postgres
