--- a/dev/up/.env
+++ b/dev/up/.env
@@ -11,6 +11,8 @@ WEBPACK_DEV_SERVER_URL=${WEBPACK_DEV_SERVER_URL:-http://localhost:8080}
 WEBPACK_DEV_SERVER_ADDR=${WEBPACK_DEV_SERVER_ADDR:-127.0.0.1:8080}
 SRC_APP_DISABLE_SUPPORT_SERVICES=true
 DEBUG=true
-AUTH_ENABLED=true
+
+DEPLOYMENT_ON_PREM=true
+
 PGUSER=sg
 PGDATABASE=postgres
