--- a/dev/up/.env
+++ b/dev/up/.env
@@ -1,3 +1,5 @@
+# Most of these are copied over from `dev/server.sh`
+
 AUTH0_CLIENT_ID=onW9hT0c7biVUqqNNuggQtMLvxUWHWRC
 AUTH0_CLIENT_SECRET=cpse5jYzcduFkQY79eDYXSwI6xVUO0bIvc4BP6WpojdSiEEG6MwGrt8hj_uX3p5a
 AUTH0_DOMAIN=sourcegraph-dev.auth0.com
@@ -7,8 +9,7 @@ GITHUB_CLIENT_SECRET=c5ff37d80e3736924cbbdf2922a50cac31963e43
 LIGHTSTEP_PROJECT=sourcegraph-dev
 LIGHTSTEP_ACCESS_TOKEN=d60b0b2477a7ccb05d7783917f648816
 LIGHTSTEP_INCLUDE_SENSITIVE=true
-WEBPACK_DEV_SERVER_URL=${WEBPACK_DEV_SERVER_URL:-http://localhost:8080}
-WEBPACK_DEV_SERVER_ADDR=${WEBPACK_DEV_SERVER_ADDR:-127.0.0.1:8080}
+
 SRC_APP_DISABLE_SUPPORT_SERVICES=true
 DEBUG=true
 
